--- a/Simulador financeiro/index.html
+++ b/Simulador financeiro/index.html
@@ -2,25 +2,29 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>calculadora financeira</title>
     <script src="calc.js"></script>
 </head>
 <!-- Corpo -->
 
-<body>
+<body >
+    
     <div class="content">
-
+       <div class="fundo"></div>
 
 
         <!--titulo-->
 
         <div class="titulo">
             <p>
-            <h2>Calculadora financeira</h2>
-            <h3>Aumente sua margem de lucro conosco!</h3>
+                <h1>Calculadora financeira</h1>
+                <h2>Aumente sua margem de lucro conosco!</h2>
             </p>
         </div>
         <!--Input-->
@@ -28,7 +32,7 @@
             <div class="input">
                 <p>
 
-                <h3>Veja como ganhar mais lucratividade!</h3>
+                    <h3>Veja como ganhar mais lucratividade!</h3>
                 </p>
 
                 <h4>Digite aqui seu faturamento mensal</h4>
