--- a/Simulador financeiro/index.html
+++ b/Simulador financeiro/index.html
@@ -17,9 +17,7 @@
     
     <div class="content">
        <div class="fundo"></div>
-
-
-        <!--titulo-->
+           <!--titulo-->
 
         <div class="titulo">
             <p>
@@ -41,12 +39,8 @@
                 <div class="btn-calcular">
                     <button onclick="Calcular()">Calcular</button>
                 </div>
-            </div>
-        </div>
-
-
-        <!-- Bottons -->
-        <div class="nav-btn">
+                <br><br>
+                <!-- Bottons -->
             <h2>Uvas mais utilizadas na fabricação de vinho</h2>
             <h3>Preço médio</h3>
             <button onclick="italia()">Uva Italia</button>
@@ -58,11 +52,14 @@
             <br>
             <br>
 
+             <!-- Fim buttons -->
+
             <div id="div_calc"></div>
-            <a class="btn btn-nav" href="/home/aluno/Desktop/calculadora/desenhoSolucao.png" target="_blank">SAIBA MAIS</a>
-        </div>
+            <a class="btn btn-nav" href="/home/aluno/viti-wine/Simulador financeiro/desenho.jpeg" target="_blank">SAIBA MAIS</a>
+            </div>
+        </div> 
     </div>
-    <!-- Fim buttons -->
+   
 
 </body>
 
